<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/txtTitulo2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nota_fiscal_goiana"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/editTextCPF2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"

        android:minHeight="48sp"
        android:text="@string/cpf" />
    <TextView
        android:id="@+id/editTextValor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:minHeight="48sp"
        android:text="@string/valor" />

    <Button
        android:id="@+id/btnSolicitar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickSaque"
        android:text="@string/solicitar_saque"
        tools:ignore="OnClick" />

    <TextView
        android:id="@+id/textResumo"
        android:layout_width="match_parent"
        android:layout_height="169dp"
        android:text="@string/mostrar_resumo_aqui" />




</LinearLayout>